--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -88,72 +88,71 @@
         </div>
         <ion-content>
           <notification ng-model="message" ng-show="message"></notification>
-          <div ng-show="!loader">
-            <div>
-              <div class="list">
-                <div ng-repeat="(status, swaps) in swapsOfferedByStatus">
-                  <div class="item item-divider">
-                    {{status}}
-                  </div>
-                  <a class="item item-avatar item-icon-right" href="" ng-repeat="swap in swaps">
-                    <div class="date-as-square">
-                      <div class="month">
-                        {{abbreviatedMonth(swap.shift.start_date)}}
-                      </div>
-                      <div class="day">
-                        {{dateFromString(swap.shift.start_date)}}
-                      </div>
-                    </div>
-                    <h2>{{swap.shift.shift_type.name}}</h2>
-                    <p>
-                      {{swap.shift.user.first_name}} {{swap.shift.user.last_name}}
-                    </p>
-                    <p>{{swap.shift.group.name}}</p>
-                    <p ng-if="!swap.shift.has_accepted_a_swap">
-                      <ng-pluralize count="countShiftsOffered(swap.shift.swaps)" when="{'0': 'No Offers Yet', '1': '1 Offer ', 'other': '{{countShiftsOffered(swap.shift.swaps)}} Offers '}"></ng-pluralize>
-                      <ng-pluralize count="swap.shift.swaps.length || 0" when="{'0': '', '1': 'from 1 Person', 'other': 'from {{swap.shift.swaps.length}} People'}"></ng-pluralize>
-                    </p>
-                    <div class="has-accepted-a-swap-details" ng-if="swap.shift.has_accepted_a_swap">
-                      <p>
-                        Swap for: {{stringDateToWords(swap.accepted_shift.start_date)}}
-                      </p>
-                      <p>
-                        Shift type: {{swap.accepted_shift.shift_type.name}}
-                      </p>
-                    </div>
-                    <i class="icon ion-chevron-right icon-accessory"></i>
-                  </a>
-                </div>
-
+          <div class="list" ng-if="swapsOffered.length > 0">
+            <div ng-repeat="(status, swaps) in swapsOfferedByStatus">
+              <div class="item item-divider">
+                {{status}}
               </div>
-              <div class="double-tab-bottom-buffer"></div>
+              <a class="item item-avatar item-icon-right" href="" ng-repeat="swap in swaps">
+                <div class="date-as-square">
+                  <div class="month">
+                    {{abbreviatedMonth(swap.shift.start_date)}}
+                  </div>
+                  <div class="day">
+                    {{dateFromString(swap.shift.start_date)}}
+                  </div>
+                </div>
+                <h2>{{swap.shift.shift_type.name}}</h2>
+                <p>
+                  {{swap.shift.user.first_name}} {{swap.shift.user.last_name}}
+                </p>
+                <p>{{swap.shift.group.name}}</p>
+                <p ng-if="!swap.shift.has_accepted_a_swap">
+                  <ng-pluralize count="countShiftsOffered(swap.shift.swaps)" when="{'0': 'No Offers Yet', '1': '1 Offer ', 'other': '{{countShiftsOffered(swap.shift.swaps)}} Offers '}"></ng-pluralize>
+                  <ng-pluralize count="swap.shift.swaps.length || 0" when="{'0': '', '1': 'from 1 Person', 'other': 'from {{swap.shift.swaps.length}} People'}"></ng-pluralize>
+                </p>
+                <div class="has-accepted-a-swap-details" ng-if="swap.shift.has_accepted_a_swap">
+                  <p>
+                    Swap for: {{stringDateToWords(swap.accepted_shift.start_date)}}
+                  </p>
+                  <p>
+                    Shift type: {{swap.accepted_shift.shift_type.name}}
+                  </p>
+                </div>
+                <i class="icon ion-chevron-right icon-accessory"></i>
+              </a>
             </div>
 
-            <div ng-if="ownShiftsWithSwaps.length == 0">
-              <div class="card">
-                <div class="item item-text-wrap">
-                  <p>
-                    You haven't listed any shifts you want to swap yet.
-                  </p>
-                  <br>
-                  <p>
-                    To swap a shift you have:
-                  </p>
-                  <br>
-                  <p>
-                    1. Go to the <a href="#/tab/calendar/index">Calendar tab</a>
-                  </p>
-                  <p>
-                    2. Select a shift
-                  </p>
-                  <p>
-                    3. Click swap
-                  </p>
-                  <br>
-                  <p>
-                    Shifts you want to swap will then show up here.
-                  </p>
-                </div>
+          </div>
+          <div class="double-tab-bottom-buffer" ng-if="swapsOffered.length > 0"></div>
+
+          <div ng-if="swapsOffered.length == 0">
+            <div class="card">
+              <div class="item item-text-wrap">
+                <p>
+                  You haven't offered to swap someone else's shift yet.
+                </p>
+                <br>
+                <p>
+                  To offer a swap:
+                </p>
+                <br>
+                <p>
+                  1. Go to the <a href="#/tab/calendar/index">Up for Grabs</a> tab at the top
+                </p>
+                <p>
+                  2. Find a shift that someone wants to get rid of
+                </p>
+                <p>
+                  3. Click "Offer to Swap"
+                </p>
+                <p>
+                  4. Select the shifts you would like to offer
+                </p>
+                <br>
+                <p>
+                  Swaps you have offered will then show up here.
+                </p>
               </div>
             </div>
           </div>
