--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -12,7 +12,7 @@
             <div ng-if="ownShiftsWithSwaps.length > 0">
               <div class="list">
                 <div ng-repeat="(name, shifts) in ownShiftsByStatus">
-                  <div class="item item-divider">
+                  <div class="item item-divider" ng-if="shifts.length > 0">
                     {{name}}
                   </div>
                   <a class="item item-avatar item-icon-right" href="#/tab/swaps/own/{{shift.id}}/detail" ng-repeat="shift in shifts">
@@ -90,7 +90,7 @@
           <notification ng-model="message" ng-show="message"></notification>
           <div class="list" ng-if="swapsOffered.length > 0">
             <div ng-repeat="(status, swaps) in swapsOfferedByStatus">
-              <div class="item item-divider">
+              <div class="item item-divider" ng-if="swaps.length > 0">
                 {{status}}
               </div>
               <a class="item item-avatar item-icon-right" href="#/tab/swaps/offered/{{swap.id}}" ng-repeat="swap in swaps">
