Go to right tab on no offered yet note

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -138,7 +138,7 @@
                 </p>
                 <br>
                 <p>
-                  1. Go to the <a href="#/tab/calendar/index">Up for Grabs</a> tab at the top
+                  1. Go to the <a ng-click="goToUpForGrabsTab()">Up for Grabs</a> tab at the top
                 </p>
                 <p>
                   2. Find a shift that someone wants to get rid of
