--- a/www/templates/general/shift_patterns/index.html
+++ b/www/templates/general/shift_patterns/index.html
@@ -21,8 +21,11 @@
           </div>
           <ion-item ng-repeat="shiftType in group.shift_types" type="item-text-wrap" class="item item-icon-right" href="#/tab/general/patterns/{{shiftType.id}}">
             {{shiftType.abbreviation}}: {{shiftType.name}}
-            <span class="item-note">
+            <span class="item-note" ng-if="shiftType.swappable">
               {{shiftType.start_hour | numberFixedLen: 2}}:{{shiftType.start_minute | numberFixedLen: 2}} - {{prettyEndTime(shiftType)}}
+            </span>
+            <span class="item-note" ng-if="!shiftType.swappable">
+              Not swappable
             </span>
             <i class="icon ion-chevron-right icon-accessory"></i>
           </ion-item>
