Show different shift pattern list if not admin of group

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -181,6 +181,10 @@ a {
 .shifts-patterns .shift-pattern-group-name {
   font-weight: bold;
   margin-bottom: 5px; }
+.shifts-patterns .admin-text-in-group-divider {
+  margin-bottom: 5px; }
+.shifts-patterns .item-not-in-admin a {
+  padding: 16px !important; }
 .shifts-patterns .add-pattern {
   text-decoration: none; }
 
