--- a/www/lib/ionic/scss/custom/calendar/_shift_patterns.scss
+++ b/www/lib/ionic/scss/custom/calendar/_shift_patterns.scss
@@ -7,6 +7,16 @@
     font-weight: bold;
     margin-bottom: 5px;
   }
+
+  .admin-text-in-group-divider {
+    margin-bottom: 5px;
+  }
+
+  .item-not-in-admin {
+    a {
+      padding: 16px !important;
+    }
+  }
   
   .add-pattern {
     text-decoration: none;
