--- a/www/templates/general/shift_patterns/index.html
+++ b/www/templates/general/shift_patterns/index.html
@@ -37,7 +37,7 @@
           </div>
 
           <div ng-if="!group.user_is_admin" class="item-not-in-admin">
-            <ion-item ng-repeat="shiftType in group.shift_types" type="item-text-wrap" class="item" href="#/tab/general/patterns/{{shiftType.id}}">
+            <ion-item ng-repeat="shiftType in group.shift_types" type="item-text-wrap" class="item">
               {{shiftType.abbreviation}}: {{shiftType.name}}
               <span class="item-note" ng-if="shiftType.swappable">
                 {{shiftType.start_hour | numberFixedLen: 2}}:{{shiftType.start_minute | numberFixedLen: 2}} - {{prettyEndTime(shiftType)}}
