--- a/www/lib/ionic/scss/custom/general/shift_patterns/_shift_patterns_detail.scss
+++ b/www/lib/ionic/scss/custom/general/shift_patterns/_shift_patterns_detail.scss
@@ -5,7 +5,7 @@
 }
 
 .shift-pattern-list {
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
 
   .input-label {
     font-size: 14px;
@@ -18,6 +18,10 @@
 
 .shift-name-input {
   font-size: 18px !important;
+}
+
+.swappable-toggle {
+  margin-bottom: 0px !important;
 }
 
 .shift-patterns-detail {
