--- a/www/templates/general/shift_patterns/new.html
+++ b/www/templates/general/shift_patterns/new.html
@@ -26,8 +26,10 @@
         </label>
       </div>
 
+      <ion-toggle ng-model="shiftPattern.swappable" ng-checked="shiftPattern.swappable" toggle-class="toggle-positive">Swappable shift?</ion-toggle>
+      <ion-toggle ng-model="shiftPattern.entireDay" ng-checked="shiftPattern.entireDay" toggle-class="toggle-positive">Entire day?</ion-toggle>
 
-      <div class="time-section-holder">
+      <div class="time-section-holder" ng-show="!shiftPattern.entireDay">
         <div class="row">
           <div class="col">
             <p>
