Simplify swap offered notification

--- a/www/templates/swaps/new-offer.html
+++ b/www/templates/swaps/new-offer.html
@@ -75,7 +75,7 @@
       </div>
       <br>
       <p>
-        You cannot offer some shifts because they're in the past or {{shift_owner.first_name}} already has a shift on that day.
+        You cannot offer some shifts because they're in the past, the shift pattern is not a swappable one, or {{shift_owner.first_name}} already has a shift on that day.
       </p>
     </div>
   </ion-content>
