Can cancel offered shifts even after acceptance

--- a/www/templates/swaps/offered-swap-detail.html
+++ b/www/templates/swaps/offered-swap-detail.html
@@ -126,7 +126,7 @@
           </p>
           <p>{{offeredShift.user.first_name}} {{offeredShift.user.last_name}}</p>
 
-          <button class="button button-positive accept-offered-swap-button" ng-click="cancelOfferedShift($event, offeredShift.id)" ng-if="swap.state == 'Open'">
+          <button class="button button-positive accept-offered-swap-button" ng-click="cancelOfferedShift($event, offeredShift.id)">
             Cancel
           </button>
 
