--- a/www/templates/swaps/offered-swap-detail.html
+++ b/www/templates/swaps/offered-swap-detail.html
@@ -137,6 +137,14 @@
         </div>
       </div>
 
+      <div class="bottom-note" ng-show="!loader">
+        <div>
+          <a class="button button-energized" href="#/tab/swaps/up-for-grabs/offer/{{shift.id}}/{{shift.start_date}}/edit/{{swap.id}}">
+            Edit Shifts Offered
+          </a>
+        </div>
+      </div>
+
     </div>
   </ion-content>
 </ion-view>
