Add notice to empty offered swaps explaining why it might be empty

--- a/www/templates/swaps/index.html
+++ b/www/templates/swaps/index.html
@@ -151,7 +151,7 @@
                 </p>
                 <br>
                 <p>
-                  Swaps you have offered will then show up here.
+                  Swaps you have offered will then show up here. If you thought you had made a swap, perhaps the person you were swapping with decided to cancel. Check your notifications tab to be sure!
                 </p>
               </div>
             </div>
