Can approve a swap

--- a/www/templates/swaps/own-detail.html
+++ b/www/templates/swaps/own-detail.html
@@ -45,7 +45,7 @@
       </p>
 
       <div class="action-buttons-holder">
-        <button class="button button-energized approve-button" ng-if="shift.has_accepted_a_swap">
+        <button class="button button-energized approve-button" ng-if="shift.has_accepted_a_swap" ng-click="approved()">
           Approved
         </button>
 
