Can approve swap from offered swap detail page

--- a/www/templates/swaps/offered-swap-detail.html
+++ b/www/templates/swaps/offered-swap-detail.html
@@ -48,7 +48,7 @@
       </p>
 
       <div class="action-buttons-holder">
-        <button class="button button-energized approve-button" ng-if="swap.state == 'Pending approval'">
+        <button class="button button-energized approve-button" ng-if="swap.state == 'Pending approval'" ng-click="approved()">
           Approved
         </button>
       </div>
