--- a/www/lib/ionic/scss/custom/general/shift_patterns/_shift_patterns.scss
+++ b/www/lib/ionic/scss/custom/general/shift_patterns/_shift_patterns.scss
@@ -8,8 +8,10 @@
     margin-bottom: 5px;
   }
 
-  .admin-text-in-group-divider {
+  .text-in-group-divider {
     margin-bottom: 5px;
+    font-size: 14px;
+    font-weight: normal;
   }
 
   .item-not-in-admin {
