Improve look of group creation and go to groups index after

--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -213,6 +213,12 @@ a {
 .detailed-group-footer-holder {
   padding: 16px; }
 
+.group-input-list {
+  margin-bottom: 0px !important; }
+
+.text-before-submit {
+  margin-bottom: 10px; }
+
 .shifts-patterns .shift-pattern-group {
   white-space: normal !important; }
 .shifts-patterns .shift-pattern-group-name {
