--- a/www/lib/ionic/scss/ionic.scss
+++ b/www/lib/ionic/scss/ionic.scss
@@ -11,6 +11,7 @@
   "custom/directives/notification",
 
   "custom/general/groups/detail",
+  "custom/general/groups/new",
   "custom/general/shift_patterns/shift_patterns",
   "custom/general/shift_patterns/shift_patterns_detail",
 
