Show whether user joined group on group/index

--- a/www/templates/general/groups/index.html
+++ b/www/templates/general/groups/index.html
@@ -13,6 +13,9 @@
     <ion-list>
       <ion-item ng-repeat="group in groups" class="item-icon-right" type="item-text-wrap" href="#/tab/general/groups/{{group.id}}">
         {{group.name}}
+        <span class="item-note" ng-if="hasUser(group)">
+          Joined
+        </span>
         <i class="icon ion-chevron-right icon-accessory"></i>
       </ion-item>
     </ion-list>
