Initial setup of comments page

--- a/www/templates/swaps/up-for-grabs-list.html
+++ b/www/templates/swaps/up-for-grabs-list.html
@@ -51,7 +51,7 @@
           <i class="icon ion-arrow-swap"></i>
           Offer to Swap
         </a>
-        <a class="tab-item">
+        <a class="tab-item" href="#/tab/swaps/comments/{{shift.id}}">
           <i class="icon ion-chatbox"></i>
           Comment
         </a>
