--- a/www/templates/swaps/comments/view.html
+++ b/www/templates/swaps/comments/view.html
@@ -4,6 +4,26 @@
     <a class="button button-icon icon ion-ios-arrow-back" href="#/tab/swaps/index" ng-click="clearHistory()">Back</a>
   </ion-nav-buttons>
   <ion-content>
-    Hi
+    <div class="swap-own-detail-holder">
+      <p>
+        <b class="date-title">
+          <i class="icon ion-star"></i>
+          {{stringDateToWords(shift.start_date)}}
+        </b>
+      </p>
+      <p>
+        {{shift.group.name}}
+      </p>
+      <p>
+        {{shift.shift_type.name}}
+      </p>
+      <p>
+        {{shift.shift_type.start_hour | numberFixedLen: 2}}:{{shift.shift_type.start_minute | numberFixedLen: 2}} - {{prettyEndTime(shift.shift_type)}}
+      </p>
+      <p ng-if="shift.swap_notes">
+        Notes: {{shift.swap_notes}}
+      </p>
+
+    </div>
   </ion-content>
 </ion-view>
